update index html file

--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
             />
             <label for="privacy" class="check-text"
               >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a href="" class="label-link">Privacy Policy</a></label
             >
+            <button type="submit" class="modal-btn-send">Send</button>
           </div>
-          <button type="submit" class="modal-btn-send">Send</button>
         </form>
       </div>
     </div>
