--- a/portfolio.html
+++ b/portfolio.html
@@ -307,6 +307,27 @@
             </li>
           </ul>
         </div>
+        <div class="footer-container-form">
+          <h3 class="footer-title-sub">Subscribe</h3>
+          <form class="footer-form">
+            <div class="footer-container-name">
+              <input
+                type="text"
+                class="footer-input"
+                id="footer-e-mail"
+                name="footer-e-mail"
+                required
+                placeholder="E-mail"
+              />
+              <button type="submit" class="footer-button">
+                Subscribe
+                <svg width="24" height="20" class="footer-svg-fly">
+                  <use href="./images/icons.svg#icon-fly"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
